     been seen are drawn in the normal display functions.  This allows the
     player to fill out the map by exploring.  Items and monsters are only
     displayed if they are currently in the player's line-of-sight.

  Added:
   - Color support.  Color is supported by both the curses and SDL interfaces.
   - Configuration options to determine the font and tile size in the SDL
     interface.
   - Bold version of the DejaVu Sans Mono font, as on option for the user.

VERSION 0.024
Finalized 2018-08-05 02:23 EST

  The name of the game has been changed from Spelunk! to SwashRL to avoid
  confusion with the popular indie platformer Spelunky.

  The game is now licensed under the Apache License 2.0.  See README.MD for
  details.

  Windows support is back online.

  Changed:
   - Display functions are now placed in a class which can be swapped out to
     change the display method
   - Key mappings are now stored in a hashmap, and functions used to generate
     such hashmaps are added to allow source divers to add their own keymaps.
   - The message buffer is now a linked list, allowing for a dynamically sized
     buffer and some better underlying source code.
   - The USE_BLINK configuration option has been removed due to not having any
     effect.
   - The "change controls" key has been changed from F12 to '@' to keep it
     working in SDL.
   - The test map now only appears if the program is compiled with version
     "testmap"

  Added:
   - SDL support, with SDL being the default display method
   - Command line arguments have been added which allow the user to choose a
     display method at runtime
   - Multiple configurations which allow dub to build the program with or
     without curses or SDL support
   - A detailed help screen now appears when the user types '?'.  The previous
     "help" prompt new tells the user how to reach this screen.
   - Rudimentary map gen algorithm.

VERSION 0.023
Finalized 2017-12-05 22:30 EST

  Fixed: